--- a/config/locales/fra/complement.yml
+++ b/config/locales/fra/complement.yml
@@ -40,7 +40,7 @@ fra:
       nature:
         cow_milk_analysis: "Analyse de lait de vache"
         soil_analysis: "Analyse de sol"
-        unitary_cow_milk_analysis: "Analyse d'un contrôle laitier"
+        unitary_cow_milk_analysis: "Analyse d’un contrôle laitier"
     animal:
       variety:
         aallexia: "Aallexia"
@@ -1295,6 +1295,7 @@ fra:
         unique_synthesis_index: "Index de synthèse unique (ISU)"
         urea_concentration: "Teneur moyenne en urée"
         usage_duration: "Durée d’utilisation"
+        volume_area_density: "Volume par surface"
         water_content_rate: "Teneur en eau"
         width: "Largeur"
         woodstock_variety: "Variété du porte-greffe"
@@ -1884,7 +1885,12 @@ fra:
         syndicate: "Syndicat"
     entity_link:
       nature:
+        association: "Association"
+        collaboration: "Collaboration"
+        cooperation: "Coopération"
         direct_kinship: "Parenté directe"
+        management: "Management"
+        transform: "Changement de statut"
         undefined: "Indéfini"
         work: "Collaboration"
     equipment:
@@ -2312,16 +2318,16 @@ fra:
         specifications: "Spécifications"
     identifier:
       nature:
-        cartodb_api_key: "Cartodb api key"
-        cartodb_login: "Cartodb login"
-        cartodb_subdomain: "Cartodb subdomain"
-        cartodb_visualization_default: "Cartodb visualisation par défault"
-        cartodb_visualization_nitrogen_footprint: "Cartodb visualisation de l'empreinte amendement"
-        cattling_number: "Numéro de détenteur"
+        cartodb_api_key: "Clé API CartoDB"
+        cartodb_login: "Login CartoDB"
+        cartodb_subdomain: "Sous-domaine CartoDB"
+        cartodb_visualization_default: "Visualisation CartoDB par défault"
+        cartodb_visualization_nitrogen_footprint: "Visualisation CartoDB de l’empreinte amendement"
+        cattling_number: "Numéro de détenteur de troupeau"
         cattling_root_number: "Numéro racine du troupeau"
-        charentes_alliance_extranet_username: "Login Extranet Charentes alliance "
-        cooperative_cartodb_account: "Compte cooperative Cartodb"
-        cooperative_cartodb_key: "Clef cooperative Cartodb"
+        charentes_alliance_extranet_username: "Login extranet Charentes Alliance "
+        cooperative_cartodb_account: "Compte coopérative CartoDB"
+        cooperative_cartodb_key: "Clé coopérative CartoDB"
         husbandry_owner_number: "Code éleveur propriétaire"
         lilco_labratory_code: "Code laboratoire LILCO"
         msa_username: "Login MSA"
@@ -5331,7 +5337,7 @@ fra:
         female_adult_cow: "Vache"
         female_young_cow: "Génisse"
         fertilizer_division: "Zone de stockage des engrais"
-        food_distributor: "Matériel de distribution d'aliments"
+        food_distributor: "Matériel de distribution d’aliments"
         food_equipment_division: "Zone de stockage des équipements et des aliments"
         food_tank: "Silo à aliments"
         forager: "Ensileuse"
@@ -6268,6 +6274,7 @@ fra:
         unique_synthesis_index: "Index de synthèse unique (ISU)"
         urea_concentration: "Teneur moyenne en urée"
         usage_duration: "Durée d’utilisation"
+        volume_area_density: "Volume par surface"
         water_content_rate: "Teneur en eau"
         width: "Largeur"
         woodstock_variety: "Variété du porte-greffe"
@@ -6368,6 +6375,7 @@ fra:
         unique_synthesis_index: "Index de synthèse unique (ISU)"
         urea_concentration: "Teneur moyenne en urée"
         usage_duration: "Durée d’utilisation"
+        volume_area_density: "Volume par surface"
         water_content_rate: "Teneur en eau"
         width: "Largeur"
         woodstock_variety: "Variété du porte-greffe"
@@ -6714,6 +6722,7 @@ fra:
         unique_synthesis_index: "Index de synthèse unique (ISU)"
         urea_concentration: "Teneur moyenne en urée"
         usage_duration: "Durée d’utilisation"
+        volume_area_density: "Volume par surface"
         water_content_rate: "Teneur en eau"
         width: "Largeur"
         woodstock_variety: "Variété du porte-greffe"
@@ -6814,13 +6823,19 @@ fra:
         unique_synthesis_index: "Index de synthèse unique (ISU)"
         urea_concentration: "Teneur moyenne en urée"
         usage_duration: "Durée d’utilisation"
+        volume_area_density: "Volume par surface"
         water_content_rate: "Teneur en eau"
         width: "Largeur"
         woodstock_variety: "Variété du porte-greffe"
         zinc_concentration: "Teneur en zinc"
     subscription_nature:
       entity_link_nature:
+        association: "Association"
+        collaboration: "Collaboration"
+        cooperation: "Coopération"
         direct_kinship: "Parenté directe"
+        management: "Management"
+        transform: "Changement de statut"
         undefined: "Indéfini"
         work: "Collaboration"
     tax:
