--- a/config/locales/fra/nomenclatures.yml
+++ b/config/locales/fra/nomenclatures.yml
@@ -1445,8 +1445,8 @@ fra:
         dicopper_sulfate: "Sulfate de cuivre (Ⅱ)"
         dinitrogen: "Diazote"
         glucose: "Glucose"
-        # phosphate: "Phosphate"
-        # potash: "Potash"
+        phosphate: "Phosphate"
+        potash: "Potasse"
         sodium_chloride: "Chlorure de sodium"
     net_services:
       name: "Services en ligne"
@@ -1528,10 +1528,10 @@ fra:
       property_natures:
         roles: "Rôles"
       items:
-        animal_curative_medicine_admission: "Animal curative medicine admission" # animal_health
+        animal_curative_medicine_admission: "Traitement curatif des maladies animales" # animal_health
         animal_feeding: "Alimentation des animaux"
         animal_health: "Hygiène des animaux"
-        # animal_housing_maintenancnce: "Animal housing maintenancnce" # animal_health
+        animal_housing_maintenance: "Entretien des bâtiments d’élevage" # animal_health
         animal_preventive_medicine_admission: "Traitement préventif des maladies animales" # animal_health
         animal_production: "Productions animales"
         cleaning: "Nettoyage"                              # animal_health
