--- a/config/locales/jpn/nomenclatures.yml
+++ b/config/locales/jpn/nomenclatures.yml
@@ -1571,6 +1571,8 @@ jpn:
         # dicopper_sulfate: "Sulfate de cuivre (Ⅱ)"
         # dinitrogen: "Diazote"
         # glucose: "Glucose"
+        # phosphate: "Phosphate"
+        # potash: "Potasse"
         # sodium_chloride: "Chlorure de sodium"
       # name: "Molécules"
       property_natures:
@@ -1662,9 +1664,10 @@ jpn:
       # name: "États de la reproduction végétale"
     procedure_natures:
       items:
-        # animal_curative_medicine_admission: "Animal curative medicine admission"
+        # animal_curative_medicine_admission: "Traitement curatif des maladies animales"
         # animal_feeding: "Alimentation des animaux"
         # animal_health: "Hygiène des animaux"
+        # animal_housing_maintenance: "Entretien des bâtiments d’élevage"
         # animal_preventive_medicine_admission: "Traitement préventif des maladies animales"
         # animal_production: "Productions animales"
         # cleaning: "Nettoyage"
