--- a/config/locales/eng/nomenclatures.yml
+++ b/config/locales/eng/nomenclatures.yml
@@ -39,6 +39,7 @@ eng:
   nomenclatures:
     abilities:
       items:
+        # blow: "Souffler"
         # bunch: "Boteller"
         # care: "Soigner"
         catch: "Catch"
@@ -49,6 +50,7 @@ eng:
         drive: "Drive"
         # feed: "Nourrir"
         fertilize: "Fertilize"
+        # freeze: "Congeler"
         germinate: "Germinate" #?
         # grind: "Broyer"
         # grow: "Se développer"
@@ -327,6 +329,7 @@ eng:
         # pig_farming: "Élevage porcins"
         # potato_crops: "Culture de pomme de terre"
         # poultry_farming: "Élevage avicole"
+        # processing: "Transformation"
         # protein_crops: "Culture protéagineuse"
         # purchases: "Achats"
         # rabbit_farming: "Élevage cunicole"
@@ -1223,6 +1226,7 @@ eng:
         # general_ledger: "Grand livre"
         # income_statement: "Compte de résultat"
         # incoming_delivery_docket: "Bon de réception"
+        # intervention_registry: "Registre des interventions"
         # inventory: "Inventaire"
         # journal: "Journal"
         # land_parcel_registry: "Cahier de tracabilité - Parcelles"
@@ -1905,6 +1909,7 @@ eng:
           # can: "bidon"
           # cubic_meter: "mètre cube"
           # equipment: "équipement"
+          # gram: "Gram"
           # head: "tête"
           # hectare: "hectare"
           # hectoliter: "Hectolitre"
@@ -1913,16 +1918,20 @@ eng:
           # kilowatt_hour: "Kilowatt Heure"
           # liter: "litre"
           # person: "personne"
+          # plants: "Plants"
           # room: "salle"
           # round_bale: "Botte ronde"
           # small_rectangular_bale: "Botte rectangulaire petit format (100*40*40)"
           # ton: "tonne"
           # unit: "unité"
       items:
+        # 115g_jam: "Pot de 115g de confiture"
+        # 230g_jam: "Pot de 230g de confiture"
         # 25kg_bag_animal_food: "Sac d’aliment de 25kg"
         # acetal: "Acetal"
         # actilact: "Actilact"
         # additive: "Adjuvant"
+        # air_compressor: "Compresseur"
         # alfalfa_crop: "Culture de luzerne"
         # alfalfa_seed: "Semence de luzerne"
         # all_inclusive_corn_sower: "Semoir Maïs tout intégré"
@@ -1942,6 +1951,8 @@ eng:
         # barley_grain: "Grain d’orge"
         # bean_crop: "Culture de haricot"
         # beet_crop: "Culture de betterave"
+        # blackcurrant_crop: "Culture de cassissier"
+        # blackcurrant_seedling: "Plant de cassissier"
         # bolt: "Boulon"
         # bottle_75cl_wine: "Bouteille de vin (75cl)"
         # brassicaceae_fungicide: "Fongicide colza"
@@ -1968,6 +1979,7 @@ eng:
         # complete_herbicide: "Herbicide total"
         # coop:ammonitre_33,5%_vr: "ammonitre COOP 33,5% vrac"
         # coop:aviator_xpro_5l: "Aviator xpro 5l"
+        # coop:avoine_d'hiver_une_de_mai_red_25kg: "Semence d'avoine d'hiver une de mai - sac de 25kg"
         # coop:bd_s_miradoux_r1_cel_gold_net_25kg: "Semence de Blé tendre Miradoux ( r1 cel gold) - sac de 25kg"
         # coop:bd_s_tablur_r1_cel_gold_net_25kg: "Semence de Blé dur tablur r1 cel gold net - sac de 25kg"
         # coop:bd_s_tablur_r1_gau+red_25kg: "Semence de Blé dur tablur r1 gau+red - sac de 25kg"
@@ -2021,15 +2033,22 @@ eng:
         # female_adult_cow: "Vache"
         # female_hen_band: "Bande de poule"
         # female_young_cow: "Génisse"
+        # fig_crop: "Culture de figuier"
+        # fig_seedling: "Plant de figuier"
         # food_equipment_division: "Zone de stockage des aliments et du matériels"
         # food_tank: "Silo à aliments"
         # forager: "Ensileuse"
+        # freezer_tank: "Congélateur"
+        # frozen_fruit: "Fruits congelés"
+        # fruit_derivative_good: "Produits à base de fruits"
         # fuel_tank: "Cuve à fioul"
         # fungicide: "Fongicide"
         # garlic_crop: "Culture d’ail"
         # gas: "Gaz"
         # gasoline: "Essence"
         # goat_milk: "Lait de chèvre"
+        # gooseberry_crop: "Culture de groseillier"
+        # gooseberry_seedling: "Plant de groseillier"
         # granulated_insecticide_12: "Insecticide granulés"
         # grape_reaper: "Machine à vendanger"
         # grass: "Herbe"
@@ -2095,6 +2114,10 @@ eng:
         # oyster_band: "Bande d’huître"
         # pea_crop: "Culture de pois"
         # pea_seed: "Semence de pois"
+        # peach_crop: "Culture de pécher"
+        # peach_seedling: "Plant de pécher"
+        # pear_crop: "Culture de poirier"
+        # pear_seedling: "Plant de poirier"
         # permanent_meadow_crop: "Culture de prairie permanente"
         # pig_compost: "Compost de porc"
         # pig_manure: "Fumier de porc"
@@ -2109,13 +2132,21 @@ eng:
         # pruning_platform: "plate-forme de taille"
         # rabbit_manure: "Fumier de lapin"
         # rape_crop: "Culture de colza"
+        # raspberry_crop: "Culture de framboisier"
+        # raspberry_seedling: "Plant de framboisier"
         # reaper: "Moissonneuse-batteuse"
         # riflexine: "Riflexine"
+        # rose_crop: "Culture de rosier"
+        # rose_seedling: "Plant de rosier"
         # running_water: "Eau du réseau"
         # rye_crop: "Culture de seigle"
+        # saffron_crop: "Culture de safran"
+        # saffron_pollen: "Pollen de safran"
+        # saffron_seedling: "Bulbe de safran"
         # salmon_band: "Bande de saumon"
         # screed_building: "Construction béton (silo, chape, terrasse)"
         # seed: "Semence"
+        # seedling: "Plant"
         # settlement: "Aménagement"
         # silage_distributor: "Désileuse"
         # silage_division: "Zone de stockage de l’ensilage"
@@ -2135,6 +2166,7 @@ eng:
         # spring_barley_seed_25: "Semence d’orge de printemps - sac de 25kg"
         # spring_oat_crop: "Culture d’avoine de printemps"
         # strawberry_crop: "Culture de fraisier"
+        # strawberry_seedling: "Plant de fraisier"
         # subsoil_plow: "Sous soleuse"
         # sugar_vinasse: "Vinasse de sucrerie"
         # sunflower_crop: "Culture de tournesol"
@@ -2183,6 +2215,7 @@ eng:
         # additive: "Adjuvant"
         # administrative_division: "Zone Administrative"
         adult_cow: "Adult cow" #?
+        # air_compressor: "Compresseur"
         all_in_one_equipment: "All in one equipment" #?
         # animal_building_division: "Zone dédiée aux animaux"
         # animal_food: "Aliment du bétail"
@@ -2209,10 +2242,12 @@ eng:
         # female_adult_cow: "Vache"
         # female_young_cow: "Génisse"
         # fertilizer_division: "Zone de stockage des engrais"
+        # flower_crop: "Culture florale"
         # food_distributor: "Matériel de distribution d’aliments"
         # food_equipment_division: "Zone de stockage des équipements et des aliments"
         # food_tank: "Silo à aliments"
         # forager: "Ensileuse"
+        # freezer_tank: "Congélateur"
         # fruit: "Fruit"
         # fruit_crop: "Culture fruitière"
         # fuel: "Carburant"
@@ -2250,20 +2285,24 @@ eng:
         # natural_water: "Eau de pluie ou de puit"
         # organic_fertilizer: "Engrais organique"
         # oyster_band: "Bande d’huître"
+        # packaged_process_food: "Aliments transformés et conditionnés"
         # plant_medicine_tank: "Réserve de produits phytosanitaires"
         # plow: "Charrue"
         # plum_seedling: "Plant de prunier"
+        # process_food: "Aliments transformés"
         # pruning_platform: "Plate-forme de taille"
         # reaper: "Moissonneuse-batteuse"
         # running_water: "Eau du réseau"
         # salmon_band: "Bande de saumon"
         # seed: "Semence"
+        # seedling: "Plant"
         # settlement: "Aménagement"
         # shell_fruit_reaper: "Récolteuse de fruits à coques"
         # silage: "Ensilage"
         # silage_division: "Zone de stockage de l’ensilage"
         # small_equipment: "Petit matériel"
         # sower: "Semoir"
+        # species: "Epices"
         # sprayer: "Pulvérisateur"
         # spread_renting: "Location d’épandeur"
         # spreader: "Épandeur à engrais"
@@ -2325,7 +2364,9 @@ eng:
         # escourgeon_barley: "Orge escourgeon"
         feeding: "Feeding" #?
         # fixed_frost_fallow_land: "Gel fixe"
+        # fruit_processing: "Transformation de fruits"
         # garlic: "Ail"
+        # gooseberry: "Groseille"
         # grain_corn: "Maïs grain"
         # hazel: "Noisettier"
         # horsebean: "Féverolle"
@@ -2341,12 +2382,17 @@ eng:
         # milk_cattle: "Bovins Lait"
         # others_usages: "Autres utilisations (non admissibles)"
         # oyster: "Huître"
+        # peach: "Péche"
+        # pear: "Poire"
         # permanent_meadow: "Prairie permanente"
         # plum: "Prune"
         # potato: "Pomme de terre"
         production: "Production" #?
+        # raspberry: "Framboise"
         reproduction: "Reproduction" #?
+        # rose: "Rose"
         # rye: "Seigle"
+        # saffron: "Safran"
         # salmon: "Saumon"
         sanitary: "Sanitary" #?
         # seed_corn: "Maïs semence"
@@ -2558,14 +2604,12 @@ eng:
         # additive: "Additif"
         # alexis: "Alexis"
         # allium: "Ail"
-        # allo: "Allo"
         # amaranthaceae: "Amaranthaceae"
         # amaryllidaceae: "Amaryllidaceae"
         # anas: "Palmipède"
         animal: "Animal"
         # animal_group: "Troupeau"
         # animal_medicine: "Médicament vétérinaire"
-        # anne_gold: "Anne gold"
         # antiseptic: "Antiseptique"
         # apache: "Blé Apache"
         # apiaceae: "Apiaceae"
@@ -2577,18 +2621,14 @@ eng:
         # avena: "Avena"
         # aventur: "Aventur"
         # aves: "Oiseau"
-        # awaso: "Awaso"
         # aztec: "Aztec"
         # baler: "Botteleuse"
         # bambusa: "Bambou"
-        # beauty: "Beauty"
         # bergxxon: "Bergxxon"
-        # bernardina: "Bernardina"
         # beta: "Betterave"
         # betulaceae: "Betulaceae"
         # biensur: "Biensur"
         bioproduct: "Bioproduct"
-        # bluefre: "Bluefre"
         # bos: "Bovin"
         # brassica: "Colza"
         # brassica_napus: "Colza"
@@ -2604,7 +2644,6 @@ eng:
         # capra: "Caprin"
         # carignan: "Carignan"
         # carmenere_noir: "Carménère noir"
-        # carpatin: "Carpatin"
         # chardonnay: "Chardonnay"
         # chemical_fertilizer: "Engrais minéral"
         # cichorium: "Chicoré"
@@ -2616,6 +2655,8 @@ eng:
         # corylus_avellana: "Corylus avellana"
         # cot_noir: "Cot noir"
         # courtot: "Courtot"
+        # crocus: "Crocus"
+        # crocus_sativus: "Crocus sativus"
         # cucumis: "Melon"
         # cucurbitaceae: "Cucurbitaceae"
         # cultivable_zone: "Zone cultivable"
@@ -2637,9 +2678,15 @@ eng:
         # fercoril_corabel: "Fercoril corabel"
         # feriale: "Feriale"
         # fertile_coutard: "Fertile coutard"
+        # ficus: "Ficus"
+        # ficus_carica: "Ficus carica"
+        # ficus_carica_saint_pierre: "Ficus carica - Saint-Pierre"
+        # flower: "Fleur"
         # food_deliver: "Désileuse"
         # forager: "Ensileuse"
         # fragaria: "Fraise"
+        # fragaria_ananassa: "Fragaria ananassa"
+        # fragaria_ananassa_mara_des_bois: "Fragaria ananassa - Mara des bois"
         # fruit: "Fruit"
         # fuel: "Gasoil"
         # fungicide: "Produit fongicide"
@@ -2652,6 +2699,7 @@ eng:
         # grass: "Herbe"
         # grenache: "Grenache"
         # grenache_noir: "Grenache noir"
+        # grossulariaceae: "Grossulariaceae"
         # guano: "Guano"
         # harvester: "Moissonneuse"
         # hay: "Foin"
@@ -2668,6 +2716,7 @@ eng:
         # implanter: "Planteuse"
         # insecta: "Insecte"
         # insecticide: "Produit insecticide"
+        # iridaceae: "Iridaceae"
         # isengrain: "Isengrain"
         # item: "Pièce"
         # juglandaceae: "Juglandaceae"
@@ -2705,6 +2754,7 @@ eng:
         # mix: "Mélange"
         # mollusca: "Mollusque"
         # molluscicide: "Produit molluscicide"
+        # moraceae: "Moraceae"
         # mower: "Faucheuse"
         # muscadelle_blanc: "Muscadelle blanc"
         # nicotiana: "Tabac"
@@ -2728,6 +2778,7 @@ eng:
         # plower: "Charrue"
         # poa: "Prairie"
         # poaceae: "Graminée"
+        # pollen: "Pollen"
         # preparation: "Préparation"
         product: "Product"
         product_group: "Product group"
@@ -2735,15 +2786,48 @@ eng:
         # pruner: "Sécateur"
         # prunus: "Prunier"
         # prunus_domestica: "Prunus domestica"
+        # prunus_persica: "Prunus persica"
+        # prunus_persica_jh_hall: "Prunus persica - JH hall"
+        # prunus_persica_madeleine: "Prunus persica - Madeleine"
+        # prunus_persica_saint_hilaire: "Prunus persica - Saint-Hilaire"
         # prunus_salicina: "Prunus salicina"
+        # prunus_salicina_allo: "Prunus salicina - Allo"
+        # prunus_salicina_anne_gold: "Prunus salicina - Anne gold"
+        # prunus_salicina_awaso: "Prunus salicina - Awaso"
+        # prunus_salicina_beauty: "Prunus salicina - Beauty"
+        # prunus_salicina_bernardina: "Prunus salicina - Bernardina"
+        # prunus_salicina_bluefre: "Prunus salicina - Bluefre"
+        # prunus_salicina_carpatin: "Prunus salicina - Carpatin"
+        # pyrus: "Pyrus"
+        # pyrus_communis: "Pyrus communis"
+        # pyrus_communis_beurre_hardy: "Pyrus communis - Beurre hardy"
+        # pyrus_communis_william: "Pyrus communis - William"
+        # pyrus_communis_william_bon_chretien: "Pyrus communis - William bon chretien"
         # qualital: "Qualital"
         # quality: "Quality"
         # quebon: "Quebon"
         # reaper: "Moissonneuse-batteuse"
         # recital: "Recital"
         # renan: "Renan"
+        # ribes: "Ribes"
+        # ribes_nigrum: "Ribes nigrum"
+        # ribes_nigrum_andega: "Ribes nigrum - Andega"
+        # ribes_rubrum: "Ribes rubrum"
+        # ribes_rubrum_wilder: "Ribes rubrum - Wilder"
+        # rosa: "Rosa"
+        # rosa_centifolia: "Rosa centifolia"
+        # rosa_dades: "Rosa dades"
+        # rosa_gallica: "Rosa gallica"
+        # rosa_recht: "Rosa recht"
         # rosaceae: "Rosaceae"
         # rubisko: "Rubisko"
+        # rubus: "Rubus"
+        # rubus_idaeus: "Rubus idaeus"
+        # rubus_idaeus_frida: "Rubus idaeus - Frida"
+        # rubus_idaeus_mailling_promise: "Rubus idaeus - Mailling promise"
+        # rubus_idaeus_tulameen: "Rubus idaeus - Tulameen"
+        # rubus_idaeus_willamette: "Rubus idaeus - Willamette"
+        # rubus_idaeus_zeva: "Rubus idaeus - Zeva"
         # runal: "Runal"
         # salmo: "Salmonidé"
         # salt: "Sel"
